--- a/src/TaskAPI/TaskAPI.csproj
+++ b/src/TaskAPI/TaskAPI.csproj
@@ -10,6 +10,7 @@
     <PackageReference Include="Amazon.Lambda.APIGatewayEvents" Version="2.3.0" />
     <PackageReference Include="Amazon.Lambda.Serialization.Json" Version="1.8.0" />
     <PackageReference Include="AWSSDK.DynamoDBv2" Version="3.7.0.75" />
+    <PackageReference Include="FluentValidation.AspNetCore" Version="10.3.3" />
     <PackageReference Include="Newtonsoft.Json" Version="12.0.1" />
   </ItemGroup>
 </Project>
